# MathExpressionParser

./: CMakeLists.txt
Client/: CMakeLists.txt  Error.h  ShuntingYardAlg.h  Tokenizator.h  main.cpp
Client/headers/: ExpressionTree.h  Node.h  Token.h  diff.h
Client/source/: main.cpp
Differentiation/: CMakeLists.txt
Differentiation/headers/: Export.h  diff.h
Differentiation/source/: diff.cpp
Differentiation/sourse/: diff.cpp
SymbolicDifferentiationAlg/: CMakeLists.txt
SymbolicDifferentiationAlg/headers/: ExpressionTree.h  Node.h  Token.h  Tokenizator.h
SymbolicDifferentiationAlg/source/: Error.cpp  ExpressionTree.cpp  ShuntingYardAlg.cpp  Token.cpp  Tokenizator.cpp  main.cpp
